--- a/css/partial/setting.css
+++ b/css/partial/setting.css
@@ -13,6 +13,8 @@ div.wrapper {
 :root {
   --width: 100%;
   --bgcolor: black;
+
+  --border: rgba(165, 42, 42, 0.722) solid;
 }
 @font-face {
   font-family: oswald;
