--- a/css/partial/slider.css
+++ b/css/partial/slider.css
@@ -1,24 +1,20 @@
 div.slider {
   width: 85%;
   height: 500px;
-padding: 20px;
+  padding: 20px;
   position: relative;
-  margin:300px auto;
+  margin: 300px auto;
   background-color: rgba(165, 42, 42, 0.722);
   border-radius: 12px;
- 
 }
- .swiper{
+.swiper {
   width: 90%;
   height: 90%;
   border-radius: 12px;
-  border: rgba(165, 42, 42, 0.722) solid;
-  
-  
+  border: var(--border);
 }
 
 .swiper-slide {
-   
   text-align: center;
   font-size: 18px;
   background: #fff;
@@ -39,9 +35,8 @@ padding: 20px;
 }
 
 .swiper-slide img {
-    display: block;
+  display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  
 }
